# admin_panel

./: .env.example  .flake8  .gitignore  .isort.cfg  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
etl/: .dockerignore  .env.example  backoff.py  constants.py  extractor.py  loader.py  main.py  requirements.txt  settings.py  sql.py  state.py  state_redis_test.py  transformator.py  utils.py
etl/schemas/: __init__.py  db_data.py  index.py  models.py  sources.py
movies_admin/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  requirements-dev.txt
movies_admin/config/: settings.py  urls.py
movies_admin/config/components/: apps.py  base.py  database.py  network.py  security.py
movies_admin/movies/: admin.py  apps.py  models.py  signals.py
movies_admin/movies/api/v1/: urls.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/management/commands/: initadmin.py
movies_admin/movies/migrations/: 0001_initial.py  0002_filmwork_certificate_filmwork_file_path.py  0003_person_gender.py  0004_add_index_genre_film_work.py  0005_alter_filmwork_certificate_alter_personfilmwork_role.py  0006_filmwork_film_work_date_rating_idx_and_more.py  0007_alter_filmwork_creation_date_and_more.py  0008_alter_personfilmwork_role.py
sqlite_to_postgres/: .dockerignore  Dockerfile  extractor.py  load_data.py  local_typing.py  main.py  requirements-dev.txt  requirements.txt  saver.py
sqlite_to_postgres/tests/check_consistency/: test_cases.py
src/: nginx.conf
src/configs/: site.conf
(+2 files in other folders)
