[tool.poetry]
name = "new-admin-panel-sprint-1"
version = "0.1.0"
description = ""
authors = ["Ivan Bazhenov <bazhenov.in@gmail.com>"]
readme = "README.md"
packages = [{include = "new_admin_panel_sprint_1"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
faker = "^17.6.0"
django = "^4.1.7"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
django-split-settings = "^1.2.0"
django-debug-toolbar = "3.4.0"
pytest = "^7.2.2"
gunicorn = "^20.1.0"
gevent = "^22.10.2"
django-cors-headers = "^3.14.0"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
